# blog-news

./: .gitignore  README.md  pyproject.toml  requirements.txt
my_site_blog/: .dockerignore  .env_prod  Dockerfile  README.md  requirements.txt
my_site_blog/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
my_site_blog/blog/fixtures/: mysite_data.json
my_site_blog/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
my_site_blog/blog/templates/blog/: base.html
my_site_blog/blog/templates/blog/post/: comment.html  detail.html  latest_posts.html  list.html  search.html  share.html
my_site_blog/blog/templatetags/: blog_tags.py
my_site_blog/common/: views.py
my_site_blog/my_site_blog/: asgi.py  settings.py  urls.py  wsgi.py
